--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,21 @@
-title:            hacke2's blog
-description:      hacke2的前端技术博客,分享自己的技术心得,积累前段技能,汇聚前端之路的点点滴滴。
-disqus_shortname: hacke2
+title:            mob‘s blog
+description:      
+disqus_shortname: mob
 reading_time:     true
 words_per_minute: 200
 #Your site's domain goes here. Leave localhost server or blank when working locally.
-url:              http://www.hacke2.cn
+url:              http://abcdefg.info
 
 # Owner/author information
 owner:
-  name:           hacke2
+  name:           mob
   avatar:         wxl-photo2.jpg
-  bio:            "梦想还是要有的，万一实现了呢？"
-  email:          hacke2@qq.com
+  bio:            "being-towards-death"
+  email:          97546304@qq.com
   # Social networking links used in footer. Update and remove as you like.
   twitter:        
   facebook:       
-  github: hacke2         
+  github:
   stackexchange:  
   linkedin:       
   instagram:      
